feat: have filemanger-demo work with Java 8